src/test/deca/test_compilateur/context/invalid/created/binary_exp/op_arith/plus_float_boolean.deca
// Description :
//    test plus entre un float et un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type float, L’opérande droite est de type boolean. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur +

{
float a;
boolean b;
int c = a + b;
}
